Returning a list instead of a custom object for remote master history